<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">NinjAuth</string>
    <string name="splash_welcome_msg">Welcome to NinjAuth, the open-source authenticator app!\n\nPlease, continue with the setup where you can select the theme and enable authentication.</string>
    <string name="splash_welcome_msg_alt">Welcome to NinjAuth, the open-source authenticator app!\n\nThe app is still in development with weekly updates incoming. Stay tuned!</string>
    <string name="misc_empty" translatable="false" />
    <string name="btn_confirm">Confirm</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_start">Start</string>
    <string name="btn_splash_next">Continue setup</string>
    <string name="btn_authenticate">Authenticate</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_skip_setup">Finish setup</string>
    <string name="btn_finish">Finish</string>
    <string name="skip_setup_dialog_title">Do you want to skip the setup?</string>
    <string name="skip_setup_dialog_msg">If you skip the setup, your authentication codes may not be protected against unauthorized access.</string>
    <string name="skip_setup_dialog_tip">You can change these settings later in the Settings menu.</string>
    <string name="setup_title">Setup</string>
    <string name="setup_theme_title">Theme</string>
    <string name="setup_theme_description">Select the desired theme that will be used across the app</string>
    <string name="setup_theme_hint">Theme</string>
    <string name="setup_security_title">Security</string>
    <string name="setup_security_description">It is highly recommended to set an app lock as this way your data will be protected using your credentials and unauthorized access will not be possible.</string>
    <string name="setup_security_button_text">Set security</string>
    <string name="setup_complete_message">NinjAuth is ready to keep you safe.</string>
    <string name="setup_complete_license_btn">License</string>
    <string name="nav_accounts_title">Accounts</string>
    <string name="nav_labels_title">Labels</string>
    <string name="nav_settings_title">Settings</string>
    <string name="account_list_item_edit">Edit</string>
    <string name="account_list_item_delete">Delete</string>
    <string name="account_add_title">Add new account</string>
    <string name="account_add_scan_barcode_from_camera">Scan barcode with camera</string>
    <string name="account_add_scan_barcode_from_image">Scan barcode from image</string>
    <string name="account_add_manual">Enter details</string>
    <string name="browse_image">Browse image</string>
    <string name="state_opening_picker">Opening picker…</string>
    <string name="state_processing">Processing…</string>
    <string name="account_from_image_success_title">Everything\'s good</string>
    <string name="account_from_image_error_title">Could not parse the image</string>
    <string name="account_from_image_error_unknown_error">Unknown error</string>
    <string name="account_from_image_error_invalid_image">Unsupported image format</string>
    <string name="account_from_image_error_no_barcode">No barcode was found</string>
    <string name="account_from_image_error_too_many_barcode">The image contains more than one barcode</string>
    <string name="account_from_image_error_not_otp">The detected barcode is not usable for authentication</string>
    <string name="no_accounts">You have no accounts saved</string>
    <string name="no_accounts_filtered">You have no accounts matching the filters</string>
    <string name="no_labels">You have no labels saved</string>
    <string name="no_labels_for_account">No available labels were found.</string>
    <string name="account_new_form_title">Add account</string>
    <string name="account_edit_form_title">Edit account</string>
    <string name="account_title_text">Title</string>
    <string name="account_title_desc">Title that will be shown on the card</string>
    <string name="account_name_text">Account name</string>
    <string name="account_name_desc">The name of the account (e.g. joe@example.com)</string>
    <string name="account_issuer_text">Issuer</string>
    <string name="account_issuer_desc">The name of the issuer (e.g. ACME Co)</string>
    <string name="account_secret_text">Secret</string>
    <string name="account_secret_desc">The secret info used to generate the code</string>
    <string name="account_type_text">Type</string>
    <string name="account_type_desc">The type of the account</string>
    <string name="account_algo_text">Algorithm</string>
    <string name="account_algo_desc">The algorithm used for code generation</string>
    <string name="account_digits_text">Digits</string>
    <string name="account_digits_desc">Generated digits</string>
    <string name="account_type_spec_hotp_text">Counter</string>
    <string name="account_type_spec_hotp_desc">Data where to start code generation</string>
    <string name="account_type_spec_totp_text">Period</string>
    <string name="account_type_spec_totp_desc">Seconds between new code generations</string>
    <string name="account_type_totp_long">Time-Based One-Time Password (TOTP)</string>
    <string name="account_type_hotp_long">HMAC-Based One-Time Password (HOTP)</string>
    <string name="account_type_totp_short">TOTP</string>
    <string name="account_type_hotp_short">HOTP</string>
    <string name="account_hotp_generate_new_code_desc">Generate new code</string>
    <string name="account_type_spec_text">Type data</string>
    <string name="account_type_spec_totp_detail_full">%ds (period)</string>
    <string name="account_type_spec_hotp_detail_full">%d (counter)</string>
    <string name="labels">Labels</string>
    <string name="label_new_form_title">Add label</string>
    <string name="label_edit_form_title">Edit label</string>
    <string name="label_name_text">Name</string>
    <string name="label_name_desc">Name of the label</string>
    <string name="label_color_text">Color</string>
    <string name="label_color_desc">Background color of the label</string>
    <string name="error_field_empty">The field cannot be empty</string>
    <string name="error_field_number_zero">Must be more than 0</string>
    <string name="error_field_number_too_large">Too large number</string>
    <string name="error_field_number_1to8">Must be between 1 and 8</string>
    <string name="error_invalid_secret">The secret contains invalid character(s)</string>
    <string name="show_advanced">Show advanced</string>
    <string name="account_form_add_label">Add</string>
    <string name="account_form_removed_label">Removed label: %s</string>
    <string name="account_list_dialog_title">Add label to account</string>
    <string name="account_list_dialog_create_new">Create new</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string-array name="account_type_menu_entries">
        <item>@string/account_type_totp_long</item>
        <item>@string/account_type_hotp_long</item>
    </string-array>
    <string-array name="account_type_display_entries">
        <item>@string/account_type_totp_short</item>
        <item>@string/account_type_hotp_short</item>
    </string-array>
    <string-array name="account_type_values">
        <item>totp</item>
        <item>hotp</item>
    </string-array>
    <string-array name="account_algo_entries">
        <item>SHA-1</item>
        <item>SHA-256</item>
        <item>SHA-512</item>
    </string-array>
    <string-array name="account_algo_values">
        <item>sha1</item>
        <item>sha256</item>
        <item>sha512</item>
    </string-array>
    <string name="settings_backup_category_title">Backup</string>
    <string name="settings_backup_auto_not_enabled">Automatic backup is not enabled</string>
    <string name="settings_backup_auto_title">Auto Backup</string>
    <string name="settings_backup_auto_on">Changes saved to: %s</string>
    <string name="settings_backup_auto_off">Do not create backup automatically</string>
    <string name="settings_backup_create_title">Backup</string>
    <string name="settings_backup_create_desc">Create a new backup file</string>
    <string name="settings_backup_restore_title">Restore</string>
    <string name="settings_backup_restore_desc">Restore data from file</string>
    <string name="settings_restore_password_dialog_title">Password required</string>
    <string name="settings_restore_password_dialog_msg">Enter the password for the ZIP file</string>
    <string name="settings_restore_password_dialog_wrong_pass">Wrong password</string>
    <string name="password">Password</string>
    <string name="settings_prot_none">None</string>
    <string name="settings_prot_pin">PIN</string>
    <string name="settings_prot_password">Password</string>
    <string name="settings_prot_bio_pin">Biometric + PIN</string>
    <string name="settings_prot_bio_password">Biometric + Password</string>
    <string name="title_timecorrector">Time Corrector</string>
    <string name="delete_account_warning">Deleting this account without first disabling 2-factor authentication online may render your account inaccessible.</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_account_dialog_title">Are you sure you want to delete this account?</string>
    <string name="delete_account_dialog_acc_name">Account name:</string>
    <string name="delete_account_dialog_acc_issuer">Issuer:</string>
    <string name="delete_label_dialog_title">Are you sure you want to delete this label?</string>
    <plurals name="label_used_by_accounts">
        <item quantity="zero">Unused</item>
        <item quantity="one">Used by %d account</item>
        <item quantity="other">Used by %d accounts</item>
    </plurals>
    <string name="restore_mode">Restore mode</string>
    <string name="restore_mode_insert">Create new</string>
    <string name="restore_mode_update">Update existing</string>
    <string name="restore_mode_insert_value" translatable="false">insert</string>
    <string name="restore_mode_update_value" translatable="false">update</string>
    <string name="restore_processing_file">Processing ZIP file…</string>
    <string-array name="restore_mode_selector_entries">
        <item>@string/restore_mode_insert</item>
        <item>@string/restore_mode_update</item>
    </string-array>
    <string-array name="restore_mode_selector_values">
        <item>@string/restore_mode_insert_value</item>
        <item>@string/restore_mode_update_value</item>
    </string-array>
    <string name="nav_backup_title">Backup</string>
    <string name="create_backup">Pick file and save</string>
    <string name="backup_pass_text">Password</string>
    <string name="backup_pass_desc">If set, the ZIP file will be encrypted using this</string>
    <string name="backup_comment_text">Comments</string>
    <string name="backup_comment_desc">Optional comments for the backup</string>
    <string name="backup_content_title">Backup content</string>
    <string name="backup_account_qr_title">Account images</string>
    <string name="backup_account_qr_desc">Export QR images of the accounts</string>
    <string name="backup_accounts">Accounts</string>
    <string name="backup_labels">Labels</string>
    <string name="backup_dialog_title">Backup in progress</string>
    <string name="backup_error_dialog_title">Backup error</string>
    <string name="backup_progress_msg_data">Creating data file…</string>
    <string name="backup_progress_msg_account_images">Generating account image %1$d of %2$d…</string>
    <string name="backup_progress_msg_finalizing">Finalizing ZIP file…</string>
    <string name="backup_complete">Backup complete</string>
</resources>