<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="me.gingerninja.authenticator.ui.home.DeleteAccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/delete_account_dialog_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_account_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@{viewModel.accountTitle}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_msg"
            tools:text="Fake Google account" />

        <TextView
            android:id="@+id/tv_account_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:text="@{viewModel.accountName}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@id/tv_account_title"
            tools:text="fake@google.com" />

        <TextView
            android:id="@+id/tv_account_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/delete_account_dialog_acc_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_account_name"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Account name:" />

        <TextView
            android:id="@+id/tv_account_issuer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:text="@{viewModel.accountIssuer}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@id/tv_account_name"
            tools:text="Google" />

        <TextView
            android:id="@+id/tv_account_issuer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/delete_account_dialog_acc_issuer"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_account_issuer"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Issuer:" />

        <TextView
            android:id="@+id/tv_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawableStart="@drawable/ic_warning_24dp"
            android:drawablePadding="4dp"
            android:text="@string/delete_account_warning"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="?colorError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_account_issuer" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:onClick="@{viewModel::onCancelClick}"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_delete"
            app:layout_constraintTop_toBottomOf="@id/tv_warning" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="@{viewModel::onDeleteClick}"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_warning" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="end"
            app:constraint_referenced_ids="tv_account_name_title,tv_account_issuer_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>